Master-Slave架构下集群注册

--- a/diistributed-filesystem/dfs-rpc/pom.xml
+++ b/diistributed-filesystem/dfs-rpc/pom.xml
@@ -5,14 +5,28 @@
   	<groupId>com.zhss.dfs</groupId>
   	<artifactId>dfs-rpc</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
-  	<packaging>jar</packaging>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>9</source>
+					<target>9</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<packaging>jar</packaging>
 
   	<name>dfs-rpc</name>
   	<url>http://maven.apache.org</url>
 
-  	<properties>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  	</properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 	<dependencies>
 		<dependency>
