--- a/diistributed-filesystem/dfs-client/pom.xml
+++ b/diistributed-filesystem/dfs-client/pom.xml
@@ -2,19 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>diistributed-filesystem</artifactId>
+        <groupId>com.zhss.dfs</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.zhss.dfs</groupId>
-    <artifactId>diistributed-filesystem</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>dfs-client</module>
-    </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <artifactId>dfs-client</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.zhss.dfs</groupId>
+            <artifactId>dfs-rpc</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
