--- a/diistributed-filesystem/dfs-datanode/pom.xml
+++ b/diistributed-filesystem/dfs-datanode/pom.xml
@@ -11,9 +11,11 @@
   	<name>dfs-datanode</name>
   	<url>http://maven.apache.org</url>
 
-  	<properties>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  	</properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
   	<dependencies>
   		<dependency>
