--- a/diistributed-filesystem/dfs-namenode/pom.xml
+++ b/diistributed-filesystem/dfs-namenode/pom.xml
@@ -22,5 +22,10 @@
     		<artifactId>dfs-rpc</artifactId>
     		<version>0.0.1-SNAPSHOT</version>
     	</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.56</version>
+		</dependency>
   	</dependencies>
 </project>
