--- a/diistributed-filesystem/dfs-datanode/pom.xml
+++ b/diistributed-filesystem/dfs-datanode/pom.xml
@@ -23,5 +23,11 @@
     		<artifactId>dfs-rpc</artifactId>
     		<version>0.0.1-SNAPSHOT</version>
     	</dependency>
-  	</dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
